istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: jpmorgan-telemetry-pa
  namespace: production
spec:
  selector:
    matchLabels:
      app: jpmorgan-telemetry
  mtls:
    mode: STRICT
