istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jpmorgan-telemetry-gateway
  namespace: production
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: jpmorgan-tls
    hosts:
    - api.jpmorgan.com
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.jpmorgan.com
